--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,19 @@
 {
-  "name": "numpower/tensor",
+  "name": "numpower/autograd",
   "scripts": {
     "phpstan": "vendor/bin/phpstan -c phpstan.neon"
   },
   "autoload": {
     "psr-4": {
-      "NumPower\\Tensor\\": "src/"
+      "NumPower\\Tensor\\": "src/",
+      "NumPower\\Tensor\\Tests": "tests/"
     }
   },
   "require-dev": {
     "phpstan/phpstan": "1.10.32",
-    "squizlabs/php_codesniffer": "3.7.2"
+    "squizlabs/php_codesniffer": "3.7.2",
+    "phpunit/phpunit": ">=11.1.3",
+    "phpunit/php-code-coverage": ">=11.0.3"
   },
   "require": {
     "ext-numpower": "*",
