--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "phpunit/php-code-coverage": ">=11.0.3"
   },
   "require": {
+    "php": ">=8.3",
     "ext-numpower": ">=0.5.0",
     "ext-gd": "*"
   },
